--- a/style.css
+++ b/style.css
@@ -30,16 +30,17 @@ body{
 .j{
     position:relative;
     box-sizing:border-box;
-    font-size: 14px;
+    font-size: 1em;
     word-wrap:normal;
     height:12.5%;
     width:100%;
     background-color: #19BEC0;
-    box-shadow: 0 0 20px -4px black inset;
-    padding: 12px;
-    transition: box-shadow 50ms ease-in-out;
-    border: 1px black;
+    box-shadow: 0 0 20px -6px rgba(0, 0, 0, 0.5) inset;
+    padding: 1em;
+    transition: box-shadow 200ms ease;
+    border: solid 1px rgba(0, 0, 0, 0.3);
 }
+
 .jst{
     box-shadow: 0 0 20px -8px black inset;
 }
@@ -50,13 +51,14 @@ body{
     background-color:#FC4349;
     width:calc(100% - 24px);
     transition: width 400ms ease-in-out;
+    margin-left:1px;
     z-index: 2;
 }
 
 .jtotal{
     position: absolute;
     bottom:20px;
-    box-shadow: 0px 0px 1px 1px black;
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.8);
     height:4px;
     background-color:black;
     width:calc(100% - 24px);
